# hipscripts

./: .gitignore  LICENSE  README.md
.github/workflows/: compare_versions.sh  version_sync.yml
epyc/: allwise_epyc.py  for kristen.ipynb  full_hipscat_stats.py  gaia_new.py  ids_in_parquet.py  parquet_transpose.py  ps_epyc.py  small_sky_demo_dask.py  td_demo_new.py  td_demo_new_dask.py  ztf_epyc.py
epyc/Untitled Folder/: Untitled.ipynb
epyc/allwise/: README.md  allwise_epyc.py  allwise_original.py  csv_gz_reader.py  import_tic.py  run_neowise.py  ten.csv
epyc/cone_search/: README.md  copy_files_to_abfs.py  import_gaia.py  search_for_cone.py  ztf_metadata.py
epyc/dp0/: DP0.2 Catalog.ipynb  README.md  Untitled.ipynb  dp0 margin.ipynb  files_original.txt  import_dp02.py  metadata.csv  metadata.parquet
epyc/fast_selection/: Division hints (GAIA).ipynb  Division hints.ipynb  Fast Selection Demo (AGN).ipynb  Fast Selection Demo (ZTF).ipynb  Fast Selection Demo.ipynb  README.md  agn_index.py  gaia_index.py  ztf_regen.py  ztf_zource_index.py  ztfdr14_index.py
epyc/gaia/: Bulk merge.ipynb  Photometry schema.ipynb  README.md  Watch me flail.ipynb  dask join.ipynb  import_gaia_photometry.py  md5sum.txt  photometry_files.txt
epyc/hats_conversion/: README.md  convert_gaia.py  convert_misc.py  convert_tic.py  convert_wise.py  convert_ztf.py  create_epoch_photometry_hats.py
epyc/hst/: bibbity.py  hst_detailed_types.csv  hst_sum_mag_types.csv  hst_sum_prop_mag_types.csv  import_SumPropMagAper2.py  import_SumPropMagAuto.py  import_hst_detection.py
epyc/nb/: uw.csv  (+30 more)
imports/: import_agns.py  import_neowise.py  import_tic.py  stress_test.py  stress_test2.py
inspect/: ids_in_parquet.py  pandas_sum.py  pixel_density_map.py  read_hats_cds.ipynb  schema_inspect.py
misc/: HTTP fs, info, stat, isdir.ipynb  checkout.py  cleanup_git_dir.py  interrupts.csv  interrupts_scheduler.py  pretty_printing.ipynb  structure_fn.py
release/: news.rst  news_tidied.rst  read_conda_version.py  reformatter.py  template.md  watch_mamba_hats.py  watch_mamba_others.py
release/release_v0.6.4/hats/: news.md  pyproject.toml
release/release_v0.6.4/hats/changes/: 400.bugfix  404.bugfix  405.docs  406.doc  template.rst
releases/: cut_releases.py  towncrier_backfill.py  towncrier_md.toml
twiddling/: association.py  gen_schema.py  hive_convert.py  meaningful_index.py  negative_tree.ipynb  small_sky_source.py
(+102 files in other folders)
